[package]
name = "mallrave"
version = "0.1.0"
description = "The international Market"
edition = "2021"
authors = ["Mateo Lafalce <mateo.lafalce04@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mallrave"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
