[package]
name = "mallrave"
version = "1.0.0"
description = "The international Market"
edition = "2021"
authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mallrave"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
ahash = "=0.8.6"